# bobavision

./: .gitignore  CLAUDE.md  DISPLAY_SETUP.md  EVALUATION_REPORT.md  README.md  docker-compose.yml
admin/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin/src/: App.tsx
admin/src/pages/: Dashboard.tsx  Library.tsx  Queue.tsx  Settings.tsx
admin/src/services/: api.ts
admin/tests/: Dashboard.test.tsx  Library.test.tsx  Queue.test.tsx  Settings.test.tsx  api.test.ts
client/: CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run_local.py
client/src/: button.py  http_client.py  main.py  player.py  state_machine.py  web_server.py
client/test_screenshots/: README.md
client/tests/: conftest.py  test_button.py  test_e2e_client_server_streaming.py  test_http_client.py  test_main.py  test_player.py  test_state_machine.py  test_ui_screens.py  test_web_server.py
client/ui/: all_done.html  error.html  loading.html  splash.html  splash_lite.html
client/ui/scripts/: state_handler.js
client/ui/styles/: common.css
docs/: grand_plan.md  phase2_plan.md  tdd_guide.md
server/: .dockerignore  CLAUDE.md  Dockerfile  check_database.py  migrate_bonus_plays.py  pyproject.toml  pytest.ini  requirements.txt
server/src/: main.py
server/src/db/: database.py  models.py  repositories.py
server/src/media/: scanner.py
server/src/services/: limit_service.py
server/static/: limit_reached.html  limit_reached_lite.html
server/static/admin/: index.html
server/static/admin/assets/: index-BrhYnV2B.js  index-D8OL4KKL.css  index-DhXGmOlA.css  index-g3sLpJ-A.js
server/tests/: conftest.py  test_api.py  test_api_integration.py  test_client_management.py  test_database.py  test_docker.py  test_e2e_video_streaming.py  test_limit_service.py  test_models.py  test_queue.py  test_queue_api.py  test_repositories.py  test_scanner.py  test_static_files.py  test_stats_api.py  test_video_management.py
