[project]
name = "bobavision-client"
version = "0.1.0"
description = "Kids Single-Button Media Station - Raspberry Pi Client"
requires-python = ">=3.11"
dependencies = [
    "gpiozero>=2.0",
    "httpx>=0.25.0",
    "flask>=3.0.0",
    "flask-sock>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
